--- a/courses/foundation/html-css/week1/exercise0/styles.css
+++ b/courses/foundation/html-css/week1/exercise0/styles.css
@@ -6,12 +6,12 @@ figure {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
 
-  img {
-    width: 80vw;
-  }
+figure img {
+  width: 80vw;
+}
 
-  figcaption {
-    text-align: center;
-  }
+figure figcaption {
+  text-align: center;
 }
