Revert "Merge branch 'main' into javascript-week1/tracy"
This reverts commit bf0acfb07f66c1a12277bd69859ce15c271a69ab, reversing
changes made to faba99386d7d3d237d1898ad11f1761c3dcf290f.

--- a/courses/foundation/html-css/week1/exercise0/styles.css
+++ b/courses/foundation/html-css/week1/exercise0/styles.css
@@ -6,12 +6,12 @@ figure {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
 
-figure img {
-  width: 80vw;
-}
+  img {
+    width: 80vw;
+  }
 
-figure figcaption {
-  text-align: center;
+  figcaption {
+    text-align: center;
+  }
 }
