--- a/courses/foundation/html-css/week1/exercise3+4/styles.css
+++ b/courses/foundation/html-css/week1/exercise3+4/styles.css
@@ -27,7 +27,7 @@ nav {
 }
 
 nav a {
-  color: #3a6299;
+  color: #3a994a;
 }
 
 nav a:hover {
@@ -39,14 +39,8 @@ a {
   text-decoration: none;
 }
 
-a:focus,
-.btn-linkedin:focus {
-  outline: 2px solid #29627e;
-  outline-offset: 3px;
-}
-
 .btn-linkedin {
-  background-color: #3a6299;
+  background-color: #3a994a;
   padding: 0.5rem;
   border-radius: 0.25rem;
   font-size: small;
@@ -54,11 +48,11 @@ a:focus,
 }
 
 .btn-linkedin:hover {
-  background-color: #265ead;
+  background-color: #3e8e41;
 }
 
 .btn-linkedin:active {
-  background-color: #265ead;
+  background-color: #3e8e41;
   box-shadow: 0 0.25rem #eeeeee;
   transform: translateY(4px);
 }
@@ -67,10 +61,10 @@ a:focus,
   background-color: #eeeeee;
   padding: 0.5rem;
   border-radius: 0.5rem;
-}
 
-#latest-post p {
-  text-align: justify;
+  p {
+    text-align: justify;
+  }
 }
 
 aside {
